--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,30 +4,36 @@
     background: white;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 100%;
-    max-width: 100vw; /* Make sure it doesn't exceed the screen width */
+    max-width: 100vw; 
     position: relative;
 }
 
 .navbar-top {
     display: flex;
-    justify-content: space-between; /* Ensures left and right separation */
-    align-items: center; /* Centers items vertically */
-    padding: 10px 18%; /* Increased padding for left and right space */
+    justify-content: space-between; 
+    align-items: center; 
+    padding: 10px 18%; 
     background: white;
-    font-size: 14px;
+    font-size: 16px;
     color: #333;
+}
+
+.bold-text {
+    color: #0665ad;
+    font-weight: bold;
+    font-size: 17px;
 }
 
 
 .navbar-top-left {
     display: flex;
     align-items: center;
-    gap: 15px; /* Space between Call us and Email */
+    gap: 15px; 
 }
 
 .btn {
     height: 42px;
-    width: 150px; /* Adjusted for better visibility */
+    width: 150px; 
     background-color:#0665ad;
     color: white;
     border: none;
@@ -40,8 +46,8 @@
 .navbar-divider {
     border: none;
     height: 1px;
-    background-color: #ccc; /* Light gray line */
-    margin: 0; /* Adjust margin if needed */
+    background-color: #ccc; 
+    margin: 0; 
 }
 
 
@@ -51,7 +57,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 15px 18%;
-    width: 100%; /* Ensure full width */
+    width: 100%; 
 }
 
 
@@ -60,8 +66,8 @@
 .logo {
     display: flex;
     justify-content: space-between;
-    width: 74px; /* Adjust logo size if needed */
-    height: 80.56px; /* Adjust logo size if needed */
+    width: 80px; 
+    height: 90px; 
     align-items: center;
 }
 
@@ -81,14 +87,13 @@
     text-decoration: underline;
 }
 
-/* Search Icon */
+
 .search-icon {
     font-size: 20px;
     cursor: pointer;
     margin-left: 15px;
 }
 
-/* Modal Styles */
 .modal {
     position: fixed;
     top: 0;
@@ -102,7 +107,6 @@
     z-index: 1000;
 }
 
-/* Modal Content */
 .modal-content {
     background: white;
     padding: 20px;
@@ -113,7 +117,6 @@
     position: relative;
 }
 
-/* Close Button */
 .close-btn {
     position: absolute;
     top: 10px;
@@ -122,23 +125,19 @@
     cursor: pointer;
 }
 
-/* Search Input */
 .search-input {
     width: 100%;
     padding: 10px;
     font-size: 16px;
     margin-top: 20px;
-    /* border: 1px solid #ccc; */
-    /* border-radius: 5px; */
 }
 
 .menu-icon {
-    display: none; /* Hide the menu icon on larger screens */
+    display: none; 
     font-size: 30px;
     cursor: pointer;
 }
 
-/* Dropdown styles */
 .dropdown-menu {
     display: none;
     position: absolute;
@@ -156,11 +155,6 @@
     padding: 5px 0;
 }
 
-
-
-
-
-/* Responsive styles */
 @media (max-width: 768px) {
     .navbar-main {
         flex-direction: column;
@@ -171,15 +165,15 @@
         flex-direction: column;
         gap: 10px;
         width: 100%;
-        display: none; /* Hide links on mobile */
+        display: none; 
     }
 
     .nav-links.open {
-        display: flex; /* Show links when menu is open */
+        display: flex; 
     }
 
     .menu-icon {
-        display: block; /* Show menu icon on mobile */
+        display: block; 
     }
 
     .navbar-top {
